--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8462,3 +8462,8 @@ input:checked + .slider:before {
   font-size: 150%;
   text-align: left;
 }
+
+.no-side-margin {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+}
