--- a/resources/assets/sass/_login-form.scss
+++ b/resources/assets/sass/_login-form.scss
@@ -116,3 +116,8 @@ input:checked + .slider:before {
     font-size:150%;
     text-align:left;
 }
+
+.no-side-margin {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+}
