shipping API 13: finished UI changes

--- a/resources/assets/sass/_login-form.scss
+++ b/resources/assets/sass/_login-form.scss
@@ -121,3 +121,8 @@ input:checked + .slider:before {
     margin-left: 0px !important;
     margin-right: 0px !important;
 }
+
+
+.full-width {
+    width:100%;
+}
